# vertex-ai-creative-studio-issue1050

./: .geminiignore  .gitignore  .terraform.lock.hcl  AGENTS.md  Dockerfile  GEMINI.md  Procfile  README.md  app_factory.py  cloudbuild.yaml  dotenv.template  environment_variables.md  main.py  main.tf  pyproject.toml  renovate.json  requirements.txt  variables.tf
.beads/: config.yaml  issues.jsonl  metadata.json
common/: analytics.py  auth.py  error_handling.py  metadata.py  prompt_template_service.py  storage.py  tasks.py  utils.py  veo_utils.py
components/: capability_tile.py  constants.py  dialog.py  header.py  image_thumbnail.py  page_scaffold.py  pill.py  side_nav.py  snackbar.py  stepper.py  styles.py  tab_nav.py
config/: about_content.json  banana_presets.py  chirp_3hd.py  default.py  evaluators.py  firebase_config.py  gemini_image_models.py  gemini_tts.py  imagen_models.py  lyria_models.py  navigation.json  portrait_styles.py  rewriters.py  tts_presets.json  veo_models.py
docs-site/: astro.config.mjs  package-lock.json  package.json
experiments/: README.md
experiments/promptlandia/: .gitignore  GEMINI.md  Procfile  README.md  app.py  developers_guide.md  pyproject.toml  requirements.txt
experiments/promptlandia/cli/: README.md  __init__.py  checklist.py  common.py  improve.py  trim.py
experiments/promptlandia/components/: header.py  page_scaffold.py  side_nav.py  styles.py
experiments/promptlandia/config/: default.py
experiments/promptlandia/models/: __init__.py  checklist.py  checklist_models.py  domain.py  gemini.py  model_setup.py  parsers.py  prompts.py
experiments/promptlandia/pages/: checklist.py  generate.py  playground.py  promptlandia.py  settings.py  trimmer.py  video_checklist.py
experiments/promptlandia/services/: __init__.py  checklist.py  improver.py  llm_client.py  trimmer.py
experiments/promptlandia/state/: state.py
experiments/promptlandia/terraform/: variables.tf
experiments/promptlandia/tests/: test_checklist_isolated.py  test_e2e.py  test_rendering_logic.py
experiments/promptlandia/tests/unit/: test_domain.py  test_services.py
experiments/veo-variations/: .env.template  Dockerfile  Makefile  README.md  pyproject.toml  veo_variations_metadata.yaml
experiments/veo-variations/api/: main.py
experiments/veo-variations/core/: c2pa.py  generator.py  metrics.py  variations.py
experiments/veo-variations/docs/: architecture.dot  architecture_light.dot
experiments/veo-variations/scripts/: deploy.sh
experiments/veo-variations/ui/: index.html  package-lock.json  package.json
experiments/veo-variations/ui/src/: index.css  main.ts  my-element.ts  variations-app.ts
experiments/veo-variations/ui/src/components/: concept-sidebar.ts  variation-tile.ts
models/: audio_analysis.py  character_consistency.py  character_consistency_models.py  chirp_3hd.py  gemini.py  gemini_tts.py  guideline_analysis.py  image_models.py  interior_design.py  lyria.py  model_setup.py  object_rotation.py  requests.py  shop_the_look_handlers.py  shop_the_look_models.py  shop_the_look_workflow.py  starter_pack.py  upscale.py  veo.py  video_processing.py  virtual_model_generator.py  vto.py
pages/: __init__.py  about.py  banana_studio.py  brand_adherence.py  character_consistency.py  character_sheet.py  chirp_3hd.py  config.py  edit_images.py  gemini_image_generation.py  gemini_tts.py  gemini_writers_workshop.py  home.py  imagen.py  (+32 more)
(+390 files in other folders)
