[project]
name = "variations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "c2pa-python>=0.30.0",
    "fastapi>=0.135.3",
    "google-auth>=2.49.1",
    "google-cloud-storage>=3.10.1",
    "google-genai>=1.70.0",
    "marked>=0.9.1",
    "mcp>=1.27.0",
    "opencv-python>=4.13.0.92",
    "pyiqa>=0.1.15.post2",
    "pyopenssl>=26.0.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "requests>=2.33.1",
    "uvicorn>=0.42.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
